--- a/package.json
+++ b/package.json
@@ -32,9 +32,8 @@
     "express": "^4.13.4",
     "express-load": "^1.1.15",
     "method-override": "^2.3.5",
-    "mysql": "^2.10.2",
-    "sequelize": "^3.23.2",
-    "sqlite3": "^3.1.4"
+    "sqlite3": "^3.1.4",
+    "sequelize": "^3.23.2"    
   },
   "devDependencies": {
     "bluebird": "^2.9.33",
